syntax = "proto3";

package hmda.persistence;

import "model.proto";

message LineAddedMessage {
    int64 timestamp = 1;
    string data = 2;
}

message TsParsedMessage {
    hmda.fi.TransmittalSheetMessage ts = 1;
}

message TsParsedErrorsMessage {
    repeated string errors = 1;
}

message LarParsedMessage {
    hmda.fi.LoanApplicationRegisterMessage lar = 1;
}

message LarParsedErrorsMessage {
    repeated string errors = 1;
}



